--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         </header>
         <div class="bikes-wrapper" id="bikes-wrapper"></div>
     </div>
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
