added content to single bike page

--- a/bike.html
+++ b/bike.html
@@ -34,6 +34,6 @@
             <div class="info-message" id="info-message"></div>
         </div>
     </div>
-    <script src="./recipe.js"></script>
+    <script type="module" src="./bike.js"></script>
 </body>
 </html>
