--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <header>
             <div class="logo">
-                <i>Bike Land</i>
+                Bike Land
             </div>
             <ul class="nav">
                 <li><a href="#">Add new</a></li>
