finished items personal page

--- a/bike.html
+++ b/bike.html
@@ -30,7 +30,7 @@
         <div class="description-container">
             <h3>Description:</h3>
             <p id="description"></p>
-            <button id="delete-button" class="delete-button">Delete</button>
+            <button id="delete-button" class="delete-button">Delete Item</button>
             <div class="info-message" id="info-message"></div>
         </div>
     </div>
