--- a/bike.html
+++ b/bike.html
@@ -14,7 +14,7 @@
             </div>
             <ul class="nav">
                 <li><a href="./index.html">All bikes</a></li>
-                <li><a href="#">Add new</a></li>
+                <li><a href="./addNew.html">Add new</a></li>
             </ul>
         </header>
         <div class="main-container">
