--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 Bike Land
             </div>
             <ul class="nav">
-                <li><a href="#">Add new</a></li>
+                <li><a href="./addNew.html">Add new</a></li>
             </ul>
         </header>
         <div class="bikes-wrapper" id="bikes-wrapper"></div>
