finished 'add new' page punctionality

--- a/addNew.html
+++ b/addNew.html
@@ -26,6 +26,6 @@
         </div>
         <div id="submit-message" class="submit-message"></div>
     </div>
-    <script src="./addNew.js"></script>
+    <script type="module" src="./addNew.js"></script>
 </body>
 </html>
