--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <header>
             <div class="logo">
-                Bike Land
+                <a href="./index.html">Bike Land</a>
             </div>
             <ul class="nav">
                 <li><a href="./addNew.html">Add new</a></li>
